bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:6: error: ')' expected but 'else' found.
      else{ return false; }
      ^